--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -621,7 +621,7 @@ body {
   z-index: 4000;
   position: absolute;
   height: calc(100% - 28px);
-  width: 16px;
+  width: 20px;
   top: 25px;
   right: 30px;
   max-height: calc(100% - 28px);
@@ -642,7 +642,6 @@ body {
   z-index: 4100;
   cursor: pointer;
   position: absolute;
-  margin-left: 2px;
   width: 12px;
 }
 
@@ -650,7 +649,7 @@ body {
   /* markers */
   z-index: 4200;
   position: absolute;
-  width: 16px;
+  width: 100%;
   height: 6px;
   border: solid 1px #184D7E;
   border-radius: 0px;
