--- a/views/documents/lib/datasetForm.pug
+++ b/views/documents/lib/datasetForm.pug
@@ -1,7 +1,7 @@
 div(id='datasetForm')
   <div id="datasetForm.message">
-    <div>At least one dataset must be added to be able to use this form</div>
-    <div>Select a sentence that concerns a dataset, click it and then click the button "Add new Dataset"</div>
+    <div>The selected sentences are not linked to a dataset</div>
+    <div>If they are, click the button "Add new Dataset"</div>
   </div>
   <div id="datasetForm.container">
     <table>
