--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -585,6 +585,7 @@ body {
   margin-right: 6px;
   padding: 3px;
   line-height: 21px;
+  z-index: 10;
 }
 
 #xml * {
@@ -599,14 +600,17 @@ body {
 
 #xml s.selected {
   cursor: pointer;
-  background-color: black;
-  color: white;
+  background-color: black !important;
+  color: white !important;
+  border: 1px solid black;
+  z-index: 11;
 }
 
 #xml s.hover {
   cursor: pointer;
-  background-color: gray;
-  color: white;
+  background-color: gray !important;
+  color: white !important;
+  z-index: 12;
 }
 
 #documentView\.screen\.container {
