update: first version of multiple datasets per sentence

--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -227,14 +227,98 @@ body {
 
 /* ---------- DATASET FORM RULES ---------- */
 
-#datasetForm {
-  height: calc(100% - 50px);
-  border-radius: 20px;
+#datasetForm\.screen .sentence-display {
+  position: absolute;
+  top: 35px;
+  left: calc(-100%);
+  background-color: lightgray;
+  width: calc(100%);
+  cursor: pointer;
+  height: calc(100% - 28px - 50px);
+  z-index: 10000;
+}
+
+#datasetForm\.screen .sentence-img {
+  border: 1px solid black;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#datasetForm\.screen .task-bar {
+  overflow: hidden;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  background-color: lightgray;
+  height: 35px;
+  padding-top: 2px;
+  cursor: pointer;
+}
+
+#datasetForm\.screen .task-bar button[name="display-left"] {
+  position: absolute;
+  left: 5px;
+}
+
+/*#datasetForm\.screen .task-bar button[name="display-middle"] {  
+  position: absolute;
+  left: calc(50% - 10px - 20px);
+}*/
+
+#datasetForm\.screen .task-bar button[name="display-right"] {
+  position: absolute;
+  right: 50px;
+}
+
+#datasetForm\.screen .task-bar button[name="show"],
+#datasetForm\.screen .task-bar button[name="hide"] {
+  position: absolute;
+  right: 3px;
+}
+
+#datasetForm\.screen {
+  z-index: 10000;
+  position: absolute;
+  top: 25px;
+  width: calc(45%);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
   border: 1px solid #184D7E;
   background-color: white;
-  padding-top: 15px;
+  padding-top: 35px;
   padding-bottom: 15px;
-  overflow: hidden; 
+}
+
+#datasetForm\.screen.minimized {
+  height: 0px;
+  padding-top: 20px;
+  border-radius: 0px;
+  width: 46px;
+}
+
+#datasetForm\.screen.minimized.display-middle {
+  left: calc(66.6% - 18px);
+}
+
+#datasetForm\.screen.maximized {
+  height: calc(100% - 28px - 50px);
+}
+
+#datasetForm\.screen.fixed {
+  position: fixed;
+}
+
+#datasetForm\.screen.display-middle {
+  left: calc(30% - 18px);
+}
+
+#datasetForm\.screen.display-left {
+  left: 18px;
+}
+
+#datasetForm\.screen.display-right {
+  right: 20px;
 }
 
 #datasetForm .fas.fa-pen {
@@ -270,6 +354,39 @@ body {
   position: absolute;
   top: -2px;
   left: -2px;
+}
+
+#datasetForm {
+  height: 100%;
+  overflow: hidden; 
+}
+
+#datasetForm .custom-row div[key="datasets"] {
+  width: 100%;
+  padding-bottom: 10px;
+}
+
+#datasetForm .custom-row div.tpl[key="dataset"] {
+  display: none;
+}
+
+#datasetForm .custom-row div.selected[key="dataset"] {
+  border: 1px solid black;
+}
+
+#datasetForm .custom-row div[key="dataset"] {
+  font-size: 1.25em;
+  font-weight: bold;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+  text-align: center;
+  cursor: pointer;
+}
+
+#datasetForm .custom-row div[key="dataset\.sentence"] {
+  display: none !important;
 }
 
 #datasetForm .custom-row div[key="dataset\.status"][value="saved"] {
@@ -319,11 +436,12 @@ body {
 }
 
 #datasetForm table {
+  width: 100%;
   position: relative;
   border-collapse: collapse; 
 }
 
-#datasetForm th {
+#datasetForm .dataset-header {
   cursor: pointer;
   z-index: 10;
   padding-top: 5px;
@@ -339,6 +457,12 @@ body {
   justify-content: center;
   text-align: center;
   top: 0; /* Don't forget this, required for the stickiness */
+}
+
+#datasetForm th {
+  z-index: 100;
+  position: sticky;
+  top: 0;
 }
 
 #datasetForm th,
@@ -521,7 +645,7 @@ body {
 }
 
 #documentView {
-  height: 100%;
+  height: calc(100% - 50px);
   background-color: white;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
@@ -624,10 +748,10 @@ body {
 .pdfViewerScrollMarkers {
   z-index: 4000;
   position: absolute;
-  height: calc(100% - 28px);
+  height: calc(100% - 78px);
   width: 20px;
   top: 25px;
-  right: 30px;
+  left: 30px;
   max-height: calc(100% - 28px);
   overflow: hidden;
   background-color: gainsboro;
@@ -691,7 +815,7 @@ body {
   z-index: 3110;
 }
 
-#documentView #pdfViewer .contoursLayer .contour[datasetid] canvas {
+#documentView #pdfViewer .contoursLayer .contour[corresp] canvas {
   z-index: 3115;
 }
 
@@ -767,7 +891,7 @@ body {
   border: 1px solid black;
   border-radius: 2px;
   top: 30px;
-  right: 40px;
+  left: 40px;
   padding: 5px;
   z-index: 10000;
 }
@@ -780,7 +904,7 @@ body {
   border: 1px solid black;
   border-radius: 2px;
   top: 60px;
-  right: 40px;
+  left: 40px;
   padding: 5px;
   min-width: 120px;
   z-index: 10000;
