--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -314,11 +314,11 @@ body {
 }
 
 #datasetForm\.screen.display-left {
-  left: 18px;
+  left: 19px;
 }
 
 #datasetForm\.screen.display-right {
-  right: 20px;
+  right: 35px;
 }
 
 #datasetForm .fas.fa-pen {
@@ -745,44 +745,6 @@ body {
   background: lightgray;
 }
 
-.pdfViewerScrollMarkers {
-  z-index: 4000;
-  position: absolute;
-  height: calc(100% - 78px);
-  width: 20px;
-  top: 25px;
-  left: 30px;
-  max-height: calc(100% - 28px);
-  overflow: hidden;
-  background-color: gainsboro;
-}
-
-.pdfViewerScrollMarkers span {
-  -webkit-transition: all .8s ease;
-  -moz-transition: all .8s ease;
-  -ms-transition: all .8s ease;
-  -o-transition: all .8s ease;
-  transition: all .8s ease;
-}
-
-.pdfViewerScrollMarkers span.marker {
-  /* markers */
-  z-index: 4100;
-  cursor: pointer;
-  position: absolute;
-  width: 12px;
-}
-
-.pdfViewerScrollMarkers span.cursor {
-  /* markers */
-  z-index: 4200;
-  position: absolute;
-  width: 100%;
-  height: 6px;
-  border: solid 1px #184D7E;
-  border-radius: 0px;
-}
-
 #documentView #pdfViewer .page {
   margin-bottom: 10px;
 }
@@ -885,15 +847,69 @@ body {
   overflow: hidden;
 }
 
+#pdfViewerScrollMarkers {
+  z-index: 4000;
+  position: absolute;
+  height: calc(100% - 78px);
+  width: 20px;
+  max-height: calc(100% - 28px);
+  overflow: hidden;
+  background-color: gainsboro;
+}
+
+#pdfViewerScrollMarkers.display-left {
+  top: 25px;
+  left: 30px;
+}
+
+#pdfViewerScrollMarkers.display-right {
+  top: 25px;
+  right: 30px;
+}
+
+#pdfViewerScrollMarkers span {
+  -webkit-transition: all .8s ease;
+  -moz-transition: all .8s ease;
+  -ms-transition: all .8s ease;
+  -o-transition: all .8s ease;
+  transition: all .8s ease;
+}
+
+#pdfViewerScrollMarkers span.marker {
+  /* markers */
+  z-index: 4100;
+  cursor: pointer;
+  position: absolute;
+  width: 12px;
+}
+
+#pdfViewerScrollMarkers span.cursor {
+  /* markers */
+  z-index: 4200;
+  position: absolute;
+  width: 100%;
+  height: 6px;
+  border: solid 1px #184D7E;
+  border-radius: 0px;
+}
+
 #documentView #pdf #pdfViewerInfos {
   position: absolute;
   background-color: white;
   border: 1px solid black;
   border-radius: 2px;
-  top: 30px;
-  left: 40px;
   padding: 5px;
   z-index: 10000;
+}
+
+#documentView #pdf #pdfViewerInfos.display-left {
+  top: 30px;
+  left: 40px;
+}
+
+#documentView #pdf #pdfViewerInfos.display-right {
+  top: 30px;
+  right: 40px;
 }
 
 #documentView #pdf #pdfViewerMessage {
@@ -903,11 +919,19 @@ body {
   background-color: white;
   border: 1px solid black;
   border-radius: 2px;
-  top: 60px;
-  left: 40px;
   padding: 5px;
   min-width: 120px;
   z-index: 10000;
+}
+
+#documentView #pdf #pdfViewerMessage.display-left {
+  top: 60px;
+  left: 40px;
+}
+
+#documentView #pdf #pdfViewerMessage.display-right {
+  top: 60px;
+  right: 40px;
 }
 
 /* -------------------------------------------------- */
