--- a/views/layout.pug
+++ b/views/layout.pug
@@ -79,7 +79,7 @@ html
 
     block content
 
-    div(class='footer' style='text-align:center;margin-top: 20px; ')  
+    div(class='footer' style='text-align:center;padding-top: 20px; padding-bottom: 20px;')  
       a(href='https://www.dataseer.io' style='color:#ffffff;' target='_blank') dataseer.ai
       a(href='https://github.com/kermitt2/dataseer-web' target='_blank')
         i(class='fab fa-github' style='color:#1E3945;margin-left:5px;')
