--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -1,9 +1,10 @@
 html {
+  height: 100%;
   overflow: hidden;
-  overflow-y: auto;
 }
 
 body {
+  min-height: 100vh;
   flex-direction: column;
   margin-left: 50px;
   margin-right: 50px;
@@ -80,7 +81,7 @@ body {
 
 #datasetsList #datasetsList\.container\.items\.container .item.selected,
 #datasetsList #datasetsList\.container\.items\.container .item.selected.highlight {
-  border: 5px solid rgb(24, 77, 126) !important;
+  border: 5px solid black !important;
 }
 
 #datasetsList #datasetsList\.container\.items\.container .item.highlight div[key="dataset.checked"] {
@@ -226,99 +227,14 @@ body {
 
 /* ---------- DATASET FORM RULES ---------- */
 
-#datasetForm\.screen .sentence-display {
-  position: absolute;
-  top: 35px;
-  left: calc(-100%);
-  background-color: lightgray;
-  width: calc(100%);
-  cursor: pointer;
-  height: calc(100% - 28px - 50px);
-  z-index: 10000;
-}
-
-#datasetForm\.screen .sentence-img {
-  border: 1px solid black;
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-#datasetForm\.screen .task-bar {
-  display: none;
-  overflow: hidden;
-  position: absolute;
-  top: 0px;
-  width: 100%;
-  background-color: lightgray;
-  height: 35px;
-  padding-top: 2px;
-  cursor: pointer;
-}
-
-#datasetForm\.screen .task-bar button[name="display-left"] {
-  position: absolute;
-  left: 5px;
-}
-
-/*#datasetForm\.screen .task-bar button[name="display-middle"] {  
-  position: absolute;
-  left: calc(50% - 10px - 20px);
-}*/
-
-#datasetForm\.screen .task-bar button[name="display-right"] {
-  position: absolute;
-  right: 50px;
-}
-
-#datasetForm\.screen .task-bar button[name="show"],
-#datasetForm\.screen .task-bar button[name="hide"] {
-  position: absolute;
-  right: 3px;
-}
-
-#datasetForm\.screen {
-  z-index: 10000;
-  /*position: absolute;
-  top: 25px;
-  width: calc(45%);*/
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+#datasetForm {
+  height: calc(100% - 50px);
+  border-radius: 20px;
   border: 1px solid #184D7E;
   background-color: white;
-  padding-top: 35px;
+  padding-top: 15px;
   padding-bottom: 15px;
-}
-
-#datasetForm\.screen.minimized {
-  height: 0px;
-  padding-top: 20px;
-  border-radius: 0px;
-  width: 46px;
-}
-
-#datasetForm\.screen.minimized.display-middle {
-  left: calc(66.6% - 18px);
-}
-
-#datasetForm\.screen.maximized {
-  height: calc(100% - 28px - 50px);
-}
-
-#datasetForm\.screen.fixed {
-  position: fixed;
-}
-
-#datasetForm\.screen.display-middle {
-  left: calc(30% - 18px);
-}
-
-#datasetForm\.screen.display-left {
-  left: 19px;
-}
-
-#datasetForm\.screen.display-right {
-  right: 35px;
+  overflow: hidden; 
 }
 
 #datasetForm .fas.fa-pen {
@@ -354,39 +270,6 @@ body {
   position: absolute;
   top: -2px;
   left: -2px;
-}
-
-#datasetForm {
-  height: 100%;
-  overflow: hidden; 
-}
-
-#datasetForm .custom-row div[key="datasets"] {
-  width: 100%;
-  padding-bottom: 10px;
-}
-
-#datasetForm .custom-row div.tpl[key="dataset"] {
-  display: none;
-}
-
-#datasetForm .custom-row div.selected[key="dataset"] {
-  border: 1px solid black;
-}
-
-#datasetForm .custom-row div[key="dataset"] {
-  font-size: 1.25em;
-  font-weight: bold;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  padding-left: 5px;
-  padding-right: 5px;
-  text-align: center;
-  cursor: pointer;
-}
-
-#datasetForm .custom-row div[key="dataset\.sentence"] {
-  display: none !important;
 }
 
 #datasetForm .custom-row div[key="dataset\.status"][value="saved"] {
@@ -436,12 +319,11 @@ body {
 }
 
 #datasetForm table {
-  width: 100%;
   position: relative;
   border-collapse: collapse; 
 }
 
-#datasetForm .dataset-header {
+#datasetForm th {
   cursor: pointer;
   z-index: 10;
   padding-top: 5px;
@@ -457,12 +339,6 @@ body {
   justify-content: center;
   text-align: center;
   top: 0; /* Don't forget this, required for the stickiness */
-}
-
-#datasetForm th {
-  z-index: 100;
-  position: sticky;
-  top: 0;
 }
 
 #datasetForm th,
@@ -645,7 +521,7 @@ body {
 }
 
 #documentView {
-  height: calc(100% - 50px);
+  height: 100%;
   background-color: white;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
@@ -707,12 +583,8 @@ body {
   cursor: pointer;
   text-decoration: none;
   margin-right: 6px;
-  line-height: 26px;
   padding: 3px;
-  line-height: 30px;
-  z-index: 10;
-  color: black;
-  background-color: white;
+  line-height: 21px;
 }
 
 #xml * {
@@ -727,14 +599,14 @@ body {
 
 #xml s.selected {
   cursor: pointer;
-  border: 2px solid rgb(24, 77, 126);
-  z-index: 100;
+  background-color: black;
+  color: white;
 }
 
 #xml s.hover {
   cursor: pointer;
-  border: 2px dashed rgb(24, 77, 126);
-  z-index: 110;
+  background-color: gray;
+  color: white;
 }
 
 #documentView\.screen\.container {
@@ -743,6 +615,44 @@ body {
 
 #documentView #pdfViewer {
   background: lightgray;
+}
+
+.pdfViewerScrollMarkers {
+  z-index: 4000;
+  position: absolute;
+  height: calc(100% - 28px);
+  width: 20px;
+  top: 25px;
+  right: 30px;
+  max-height: calc(100% - 28px);
+  overflow: hidden;
+  background-color: gainsboro;
+}
+
+.pdfViewerScrollMarkers span {
+  -webkit-transition: all .8s ease;
+  -moz-transition: all .8s ease;
+  -ms-transition: all .8s ease;
+  -o-transition: all .8s ease;
+  transition: all .8s ease;
+}
+
+.pdfViewerScrollMarkers span.marker {
+  /* markers */
+  z-index: 4100;
+  cursor: pointer;
+  position: absolute;
+  width: 12px;
+}
+
+.pdfViewerScrollMarkers span.cursor {
+  /* markers */
+  z-index: 4200;
+  position: absolute;
+  width: 100%;
+  height: 6px;
+  border: solid 1px #184D7E;
+  border-radius: 0px;
 }
 
 #documentView #pdfViewer .page {
@@ -777,7 +687,7 @@ body {
   z-index: 3110;
 }
 
-#documentView #pdfViewer .contoursLayer .contour[corresp] canvas {
+#documentView #pdfViewer .contoursLayer .contour[datasetid] canvas {
   z-index: 3115;
 }
 
@@ -847,69 +757,15 @@ body {
   overflow: hidden;
 }
 
-#pdfViewerScrollMarkers {
-  z-index: 4000;
-  position: absolute;
-  height: calc(100% - 78px);
-  width: 30px;
-  max-height: calc(100% - 28px);
-  overflow: hidden;
-  background-color: gainsboro;
-}
-
-#pdfViewerScrollMarkers.display-left {
-  top: 25px;
-  left: 30px;
-}
-
-#pdfViewerScrollMarkers.display-right {
-  top: 25px;
-  right: 30px;
-}
-
-#pdfViewerScrollMarkers span {
-  -webkit-transition: all .8s ease;
-  -moz-transition: all .8s ease;
-  -ms-transition: all .8s ease;
-  -o-transition: all .8s ease;
-  transition: all .8s ease;
-}
-
-#pdfViewerScrollMarkers span.marker {
-  /* markers */
-  z-index: 4100;
-  cursor: pointer;
-  position: absolute;
-  width: 12px;
-}
-
-#pdfViewerScrollMarkers span.cursor {
-  /* markers */
-  z-index: 4200;
-  position: absolute;
-  width: 100%;
-  height: 6px;
-  border: solid 1px #184D7E;
-  border-radius: 0px;
-}
-
 #documentView #pdf #pdfViewerInfos {
   position: absolute;
   background-color: white;
   border: 1px solid black;
   border-radius: 2px;
-  padding: 5px;
-  z-index: 10000;
-}
-
-#documentView #pdf #pdfViewerInfos.display-left {
-  top: 30px;
-  left: 40px;
-}
-
-#documentView #pdf #pdfViewerInfos.display-right {
   top: 30px;
   right: 40px;
+  padding: 5px;
+  z-index: 10000;
 }
 
 #documentView #pdf #pdfViewerMessage {
@@ -919,19 +775,11 @@ body {
   background-color: white;
   border: 1px solid black;
   border-radius: 2px;
+  top: 60px;
+  right: 40px;
   padding: 5px;
   min-width: 120px;
   z-index: 10000;
-}
-
-#documentView #pdf #pdfViewerMessage.display-left {
-  top: 60px;
-  left: 40px;
-}
-
-#documentView #pdf #pdfViewerMessage.display-right {
-  top: 60px;
-  right: 40px;
 }
 
 /* -------------------------------------------------- */
