Revert "fix update documents bug"

--- a/views/documents/lib/datasetForm.pug
+++ b/views/documents/lib/datasetForm.pug
@@ -1,4 +1,4 @@
-div(id='datasetForm.screen')
+div(id='datasetForm.screen' class='display-right')
   <div class="task-bar">
     <button class="btn btn-sm btn-primary" name="display-left"><i class="fas fa-arrow-left"></i></button>
     <!-- <button class="btn btn-sm btn-primary" name="display-middle"><i class="fas fa-align-center"></i></button> -->
